
[package]
name = "cryochange-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
once_cell = "1.19.0"
rand = "0.8.5"
redis = {version ="0.26.0", features = ["tokio-comp"]}
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
